--- a/content/report/110_kmom01.md
+++ b/content/report/110_kmom01.md
@@ -2,3 +2,29 @@ Kmom01
 ===============================
 
 Report for kmom01.
+
+Jag kan börja med att om denna kursen inte hade varit möjlig om jag inte fått hjälp av en lärare som genom sin kunskap och erfarenhet lyckades installera composer och Mark. Jag satt själv i flera timmar och försökte mig på det och kammade noll. Antingen är beskrivningen inte tillräckligt detaljerad eller så utgår ni från att jag skall kunna mer än vad jag gör från början. Min kunskap inom dessa ämnen är från grunden lika med noll och det känns kämpigt att inte ens kunna starta själva uppgifterna.
+
+När man väl fick börja med övningarna kändes det lite spännande man kunnde känna igen vissa saker och koppla att vissa filer hör till andra. När man sedan fick byta lite bilder blev det ganska klart hur det hänger ihop. Fast nu var det ju mest content mappen man kollade it. Till min förskräckelse kunnde jag inte alls förstå vad som gömde sig i de andra mapparna. Väggar av text som säkert (enligt mig) tagit åtskiliga dagar att ens tänka upp och ännu fler att skriva ner! När når jag denna nivå för att göra något så pass "basic" som vi jobbar med nu?
+
+Är du sedan tidigare van att jobba i ramverk för att bygga webbplatser? Om ja, vilka ramverk/språk har du jobbat med?
+
+Absolut inte!
+
+
+Det blev en del nya verktyg i labbmiljön, var de nya för dig eller kände du igen dem?
+
+Helt nytt!
+
+Hur kändes det att jobba med Anax Flat och bygga din me-sida?
+
+det känns stilrent till en början nu. Var sak på sin plats och inte så mycket krångel. Det ändras väl i kmom02.
+
+Har du några förutfattade meningar, eller kanske en etablerad övertygelse, inom design och användbarthet för webben?
+
+Jag är väldigt intresserad av design och utformning av allt möjligt. Jag valde just denna linje för att kunna jobba med hemsidor och skapa. Jag anade att det var mycket bakomliggande kodning som behövdes för en fungerande sida vilket jag måste kunna. För vem vill lanställa någon som bara kan använda en färgburk när de kan få en som bygger hela grunden, huset, ansar trädgården och fixar ett morgontidnings abonnemang åt dig!
+Förutsatt att ingen bara vill få sin lada målad givetvis, då skulle det passa med mindre kompetens.
+
+Det fanns videor som kompletterade artiklarna, hjälpte de dig att förstå materialet bättre?
+
+Oja denna kmom kom Mikel fram som en hjälte! Om man kan följa videorna vet man att man gör rätt och den känslan behövs när man sitter och försökt lösa ett syntagmfel i en timme.
